src/test/scala/unit_tests/invalid_syntax/missing_semicolon.wacc
# missing semi colon

begin
    int x = 5
    int y = 6
    int z = 7
end